[gd_scene load_steps=36 format=3 uid="uid://c4ot3ksjrurvq"]

[ext_resource type="Script" uid="uid://ctjyh76sb71o2" path="res://scripts/creature/player.gd" id="1_5jwn5"]
[ext_resource type="Texture2D" uid="uid://dq23fem364i6e" path="res://characters/main/attack.png" id="2_wt686"]
[ext_resource type="Texture2D" uid="uid://corrqm4abg51m" path="res://characters/main/idle_breathing.png" id="3_qf26e"]
[ext_resource type="PackedScene" uid="uid://bl8dq63e4q50s" path="res://screens/health_bar.tscn" id="4_8qnwq"]
[ext_resource type="Texture2D" uid="uid://3kpxkqyvv2lu" path="res://characters/main/idle_napping.png" id="4_qf26e"]
[ext_resource type="Texture2D" uid="uid://fnmos25kty2p" path="res://characters/main/walk.png" id="4_wt686"]
[ext_resource type="Script" uid="uid://cymskb8os05mp" path="res://scripts/events/damage_particles.gd" id="5_rnd8p"]
[ext_resource type="Texture2D" uid="uid://cjxeb2qe52nso" path="res://themes/UI_images/healthbarUnder.png" id="8_woc4k"]
[ext_resource type="Texture2D" uid="uid://bnbrosqfkieab" path="res://themes/UI_images/healthbarProgress.png" id="9_03ukr"]
[ext_resource type="Script" uid="uid://diejx4sdigqis" path="res://scripts/events/player_health_bar.gd" id="10_03ukr"]
[ext_resource type="FontFile" uid="uid://bk0q2iocadv0a" path="res://themes/font/Minecraft.ttf" id="11_gsa0h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pt0rq"]
atlas = ExtResource("2_wt686")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_woc4k"]
atlas = ExtResource("2_wt686")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03ukr"]
atlas = ExtResource("2_wt686")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsa0h"]
atlas = ExtResource("2_wt686")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khmpe"]
atlas = ExtResource("2_wt686")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dul1j"]
atlas = ExtResource("2_wt686")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p72b"]
atlas = ExtResource("3_qf26e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s771n"]
atlas = ExtResource("3_qf26e")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_quheg"]
atlas = ExtResource("3_qf26e")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvoup"]
atlas = ExtResource("3_qf26e")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj61m"]
atlas = ExtResource("4_qf26e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lbhf"]
atlas = ExtResource("4_qf26e")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p5dn"]
atlas = ExtResource("4_qf26e")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tww4i"]
atlas = ExtResource("4_qf26e")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf26e"]
atlas = ExtResource("4_wt686")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s7lk"]
atlas = ExtResource("4_wt686")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfj55"]
atlas = ExtResource("4_wt686")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdj2h"]
atlas = ExtResource("4_wt686")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h10iw"]
atlas = ExtResource("4_wt686")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fflb"]
atlas = ExtResource("4_wt686")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ra7kh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt0rq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_woc4k")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_03ukr")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_gsa0h")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_khmpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dul1j")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_3p72b")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_s771n")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_quheg")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_cvoup")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_yj61m")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_1lbhf")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_7p5dn")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_tww4i")
}],
"loop": true,
"name": &"nap",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf26e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s7lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfj55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdj2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h10iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fflb")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjbw5"]
size = Vector2(15, 53)

[sub_resource type="Gradient" id="Gradient_wt686"]
colors = PackedColorArray(0.431373, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="Theme" id="Theme_03ukr"]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_5jwn5")

[node name="Catimation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ra7kh")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_gjbw5")

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("4_8qnwq")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DamageParticles" type="CPUParticles2D" parent="."]
position = Vector2(3, -3)
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
color_ramp = SubResource("Gradient_wt686")
script = ExtResource("5_rnd8p")

[node name="PlayerHealthBar" type="TextureProgressBar" parent="."]
offset_left = -17.0
offset_top = -45.0
offset_right = 23.0
offset_bottom = -5.0
texture_under = ExtResource("8_woc4k")
texture_progress = ExtResource("9_03ukr")
script = ExtResource("10_03ukr")

[node name="HealthLabel" type="Label" parent="PlayerHealthBar"]
layout_mode = 0
offset_top = 4.0
offset_right = 35.0
offset_bottom = 27.0
theme = SubResource("Theme_03ukr")
theme_override_fonts/font = ExtResource("11_gsa0h")
theme_override_font_sizes/font_size = 4
horizontal_alignment = 1

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
